frontend/test/should_fail/defYield_005i.grg
using defYield;

test t
{
	y:B;
	pp:p(x, y);
---
	def x:B;
}

pattern p(x:B --- def z:B)
{
	y:B;
---
	yield { yield x = y; }
}

